build_output.log
   Compiling rust_vst_synth_qc_claude v0.1.0 (/Users/gssp/Developer/rust_vst_qc_claude)
error[E0412]: cannot find type `Events` in this scope
  --> src/lib.rs:97:43
   |
97 |     fn process_events(&mut self, events: &Events) {
   |                                           ^^^^^^
   |
  ::: /Users/gssp/.cargo/registry/src/index.crates.io-6f17d22bba15001f/vst-0.3.0/src/event.rs:10:1
   |
10 | pub enum Event<'a> {
   | ------------------ similarly named enum `Event` defined here
   |
help: an enum with a similar name exists
   |
97 |     fn process_events(&mut self, events: &Event) {
   |                                           ~~~~~
help: consider importing this struct
   |
4  + use vst::prelude::Events;
   |

error[E0412]: cannot find type `Supported` in this scope
   --> src/lib.rs:115:53
    |
115 |     fn can_do(&self, can_do: vst::plugin::CanDo) -> Supported {
    |                                                     ^^^^^^^^^ not found in this scope
    |
help: consider importing this enum
    |
4   + use vst::prelude::Supported;
    |

error[E0433]: failed to resolve: use of undeclared type `Supported`
   --> src/lib.rs:117:53
    |
117 |             vst::plugin::CanDo::ReceiveMidiEvent => Supported::Yes,
    |                                                     ^^^^^^^^^ use of undeclared type `Supported`
    |
help: consider importing this enum
    |
4   + use vst::prelude::Supported;
    |

error[E0433]: failed to resolve: use of undeclared type `Supported`
   --> src/lib.rs:118:18
    |
118 |             _ => Supported::Maybe,
    |                  ^^^^^^^^^ use of undeclared type `Supported`
    |
help: consider importing this enum
    |
4   + use vst::prelude::Supported;
    |

Some errors have detailed explanations: E0412, E0433.
For more information about an error, try `rustc --explain E0412`.
error: could not compile `rust_vst_synth_qc_claude` (lib) due to 4 previous errors
